--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "5.0.*"
+		"laravel/framework": "5.0.*",
+		"simplepie/simplepie": "dev-master",
+		"awjudd/feed-reader": "1.2.*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
